fix: fix quote-wrap

--- a/momentum/css/style.css
+++ b/momentum/css/style.css
@@ -358,7 +358,7 @@ body {
   }
 
   .quote-wrap {
-    min-height: 120px;
+    min-height: 165px;
   }
 
 }
